crates/es-fluent-derive/tests/ui/duplicate_enum_message_keys.rs
use es_fluent_derive::EsFluent;

#[derive(EsFluent)]
pub enum LoginError {
    #[fluent(key = "same")]
    MissingUser,
    #[fluent(key = "same")]
    InvalidPassword,
}

fn main() {}
